// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPreview should render a single product preview with an image 1`] = `
<div
  className="product-preview"
>
  <img
    alt=""
    src="https://example.local/product.jpg"
  />
  <div
    className="product-title"
  >
    Winter Jacket
  </div>
  <div
    className="product-price"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"woocommerce-Price-amount amount\\"><span class=\\"woocommerce-Price-currencySymbol\\">&#36;</span>65.00</span>",
      }
    }
  />
  <span
    className="product-add-to-cart"
  >
    Add to cart
  </span>
</div>
`;

exports[`ProductPreview should render a single product preview without an image 1`] = `
<div
  className="product-preview"
>
  <div
    className="product-title"
  >
    Winter Jacket
  </div>
  <div
    className="product-price"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"woocommerce-Price-amount amount\\"><span class=\\"woocommerce-Price-currencySymbol\\">&#36;</span>65.00</span>",
      }
    }
  />
  <span
    className="product-add-to-cart"
  >
    Add to cart
  </span>
</div>
`;
